--- a/Web/ComputerPartsCatalog.Web.ViewModels/ComputerPartsCatalog.Web.ViewModels.csproj
+++ b/Web/ComputerPartsCatalog.Web.ViewModels/ComputerPartsCatalog.Web.ViewModels.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\ComputerPartsCatalog.Data.Models\ComputerPartsCatalog.Data.Models.csproj" />
     <ProjectReference Include="..\..\Services\ComputerPartsCatalog.Services.Mapping\ComputerPartsCatalog.Services.Mapping.csproj" />
+    <ProjectReference Include="..\ComputerPartsCatalog.Web.Infrastructure\ComputerPartsCatalog.Web.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
