--- a/Services/ComputerPartsCatalog.Services.Data/ComputerPartsCatalog.Services.Data.csproj
+++ b/Services/ComputerPartsCatalog.Services.Data/ComputerPartsCatalog.Services.Data.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\ComputerPartsCatalog.Common\ComputerPartsCatalog.Common.csproj" />
     <ProjectReference Include="..\..\Data\ComputerPartsCatalog.Data.Common\ComputerPartsCatalog.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\ComputerPartsCatalog.Data.Models\ComputerPartsCatalog.Data.Models.csproj" />
     <ProjectReference Include="..\..\Web\ComputerPartsCatalog.Web.ViewModels\ComputerPartsCatalog.Web.ViewModels.csproj" />
